<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="read_document">Döküman oku</string>
    <string name="introduce_env">Çevreyi tanıt</string>
    <string name="train_yourself">Kendin eğit</string>
    <string name="select_model">Model seç</string>
    <string name="guide">Yönlendir</string>
    <string name="give_voice_command">Sesli komut ver</string>
</resources>
